--- a/package.json
+++ b/package.json
@@ -3,16 +3,10 @@
   "version": "0.1.0",
   "description": "n8n community node for Zoho Desk API integration",
   "keywords": [
-    "n8n",
-    "n8n-community-node-package",
-    "n8n-node",
-    "zoho",
-    "zoho desk",
-    "helpdesk",
-    "ticketing"
+    "n8n-community-node-package"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/yourusername/n8n-nodes-zoho-desk",
+  "homepage": "",
   "author": {
     "name": "Your Name",
     "email": "your.email@example.com"
@@ -22,19 +16,14 @@
     "url": "git+https://github.com/yourusername/n8n-nodes-zoho-desk.git"
   },
   "engines": {
-    "node": ">=18.10",
-    "pnpm": ">=8.6"
+    "node": ">=18.10"
   },
-  "packageManager": "pnpm@8.6.12",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && gulp build:icons",
+    "build": "tsc",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
-    "lint": "eslint nodes credentials package.json",
-    "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "pnpm build && pnpm lint -c && pnpm test",
-    "test": "jest"
+    "lint": "eslint nodes credentials"
   },
   "files": [
     "dist"
@@ -49,17 +38,12 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
-    "gulp": "^4.0.2",
-    "n8n-workflow": "~1.28.0",
+    "n8n-workflow": "*",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "n8n-workflow": "~1.28.0"
   }
 }
