--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com"
+    "name": "Pratik Khadloya",
+    "email": "pratik@enthu.com"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourusername/n8n-nodes-zoho-desk.git"
+    "url": "git+https://github.com/Enthuziastic/n8n-nodes-zoho-desk.git"
   },
   "engines": {
     "node": ">=18.10"
