--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major",
-    "publish:patch": "npm run version:patch && npm publish",
-    "publish:minor": "npm run version:minor && npm publish",
-    "publish:major": "npm run version:major && npm publish"
+    "publish:patch": "npm run build && npm run version:patch && npm publish",
+    "publish:minor": "npm run build && npm run version:minor && npm publish",
+    "publish:major": "npm run build && npm run version:major && npm publish"
   },
   "lint-staged": {
     "*.ts": [
